Fixed a few skeletons and layout bugs for ios

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,4 +28,8 @@
   .border-l {
     @apply border-neutral-700;
   }
+
+  .h-screen {
+    @apply h-[100dvh];
+  }
 }
